<resources>
    <string name="app_name">Toreado</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Toreado</string>

    <string name="title_section1">Acerca de</string>
    <string name="title_section2">Instrucciones</string>
    <string name="title_section3">Solicita</string>
    <string name="acerca_de_fragment">  Toreado es una empresa dedicada a facilitar el acceso a la justicia a la población ofreciendo el servicio de amparo a los ciudadanos cuyos derechos constitucionales fueron violados por el programa alcoholímetro.</string>

	<string name="instrucciones_torero">INSTRUCCIONES DE USO\n\n
        1. Envía tus datos y paga $2,500 pesos con tu tarjeta de crédito o débito.\n
        2. Un representante de "Toreado" redactará y presentará de inmediato tu amparo.\n
        3. Un juez de distrito aprobará la suspensión de tus horas en "el torito" o "la vaquita".\n
        4. Un secretario actuario será enviado a notificar la suspensión a la autoridad correspondiente.\n
        5. Alcanzarás la libertad y podrás descansar tranquilo en casa.\n
        6. En caso de que el juez determine que deberás cumplir posteriormente con horas de arresto, se te notificará en el domicilio que nos enviaste.</string>
    <string name="solicita_texto">Datos para solicitar</string>
    <string name="graicas_texto">Tu pago fue realizado con éxito! Enseguida un representante de Toreado presentará tu amparo ante la autoridad competente. </string>
    <string name="nombre_solicita">Nombre</string>
    <string name="calle_solicita" >Calle</string>
    <string name="numero_solicita">Num.</string>
    <string name="colonia_solicita">Colonia</string>
    <string name="juzgado_solicita">Juzgado Cívico</string>
    <string name="delegacion_solicita">Delegación</string>
    <string name="apellido_solicita">Apellidos</string>
    <string name="button">ACEPTAR</string>
    <string name="button_pago">Pagar</string>
    <string name="terminos_condiciones"><![CDATA[ <div>
	<div>
		I. Normas Generales.</div>

	<div>
		La utilizaci&oacute;n de &quot;Torero&quot; implica su aceptaci&oacute;n plena y sin reservas a todas y cada una de las disposiciones incluidas en este Aviso Legal, por lo que si usted no est&aacute; de acuerdo con cualquiera de las condiciones aqu&iacute; establecidas, no deber&aacute; usar u/o acceder a este sitio.</div>

	<div>
		Reservamos el derecho a modificar estos T&eacute;rminos y Condiciones de Uso en cualquier momento. El uso continuo de cualquier porci&oacute;n de &quot;Torero&quot; tras la notificaci&oacute;n o anuncio de tales modificaciones constituir&aacute; su aceptaci&oacute;n de tales cambios.</div>

	<div>
		II. Precio.</div>
	<div>
		El precio por los servicios que se ofrecen es la cantidad de tanto mismo que incluye el impuesto al valor agregado.</div>

	<div>
		III. Servicios.</div>
	<div>
		Los servicios que ofrece &quot;Torero&quot; son los siguientes:</div>

	<div>
		1. Preparaci&oacute;n del documento de la demanda de amparo.</div>

	<div>
		2. Presentaci&oacute;n ante las autoridades federales de dicho documento.</div>

	<div>
		3. Gesti&oacute;n para que las autoridades responsables conozcan de la suspensi&oacute;n provisional cuando esta sea autorizada por la autoridad federal correspondiente.</div>

	<div>
		IV. Requisitos que debe cubrir el solicitante de los servicios.</div>

	<div>
		1. Solicitud realizada por medio de la aplicaci&oacute;n movil &quot;Torero&quot;.</div>

	<div>
		2. Llenar con respuestas ciertos y precisos los datos que se requieren en la solicitud.</div>

	<div>
		3. Realizar el pago correspondiente con cargo a su tarjeta de cr&eacute;dito o d&eacute;bito.</div>

	<div>
		V. Exenci&oacute;n de la Responsabilidad.</div>

	<div>
		1. &quot;Torero&quot; no se hace responsable del t&eacute;rmino que transcurra entre la solicitud de amparo, la resoluci&oacute;n de la suspensi&oacute;n provisional y la notificaci&oacute;n de esta a la autoridad responsable ya que ello depende del Poder Judicial Federal.</div>

	<div>
		2. Los servicios que incluye el servicio que se ofrece concluyen con el otorgamiento o negaci&oacute;n de la suspensi&oacute;n provisional</div>
	
	<div>
		3. EL servicio contempla la vinculaci&oacute;n con un medio de cobro electr&oacute;nico totalmente ajeno a &quot;Torero&quot; para la realizaci&oacute;n del pago por parte del &ldquo;CLIENTE&rdquo;. Al ser externo la empresa de cobro del servicio &ldquo;EL PRESTADOR&rdquo; queda liberado de cualquier problema que se tenga con respecto a ese servicio.</div>

	<div>
		4. Los servicios ofrecidos se dan para que el solicitante de los mismos obtenga su libertad por raz&oacute;n de la violaci&oacute;n de los derechos humanos de que fue privado, de esta manera, el prestador del servicio no se hace responsable de las negociaciones o solicitudes, servicios que el solicitante realice con terceras personas ajenas a &quot;Torero&quot;.</div>

	<div>
		5. &quot;Torero&quot; no se hace responsable en el caso de que el solicitante del servicio proporcione sus datos personales de manera incorrecta o bien, los datos relacionados con la autoridad responsable.</div>

	<div>
		6. Una vez realizado el pago, de inmediato se prestar&aacute; el servicio por lo que no habr&aacute;devoluciones en el caso de inconformidad.</div>
</div>
 ]]></string>

    <string name="aviso_privacidad">Torero, con domicilio en Céfiro 120, torre 3, depto 201, colonia Pedregal de Carrasco, Delegación

Coyoacán, CP. 04700, Distrito Federal, es el responsable del uso y protección de sus datos

personales, y al respecto le informamos lo siguiente:\n

\tI. Los datos personales recabados en esta aplicación serán utilizados para las siguientes

finalidades:\n

\t\t1. Redacción de Amparo contra alcoholimetro.\n

\t\t2. Presentación de Amparo contra alcoholimetro.\n

\t\t3. Cobranza.\n

\t\t4. Información.\n

\t\t5. Aclaración.\n\n

\tII. Los datos datos necesarios para llevar a cabo las finalidades descritas en el presente aviso de

privacidad son los siguientes:\n

\t\t1. Nombre.\n

\t\t2. Dirección.\n

\t\t3. Juzgado Cívico en el que se lleva procedimiento.\n

\t\t4. Teléfono Celular.\n\n

\tIII. Como opción y medio que Torero ofrezce a los titulares para limitar el uso o divulgación de los

datos Torero se obliga a eliminar los datos personales utilizados tras concluir el servicio. Por lo

tanto, el titular deberá brindar sus datos y aceptar este aviso de privacidad cada vez que solicite el

servicio.\n\n

\tIV. Para acceder, rectificar, cancelar u oponerse al uso de los datos personales:

Usted tiene derecho a conocer que datos personales tenemos de usted, para que los utilizamos y

las condiciones del uso que le damos (Acceso). Asimismo, es su derecho solicitar la corrección de

su información personal en caso de que esté descatualizada, sea inexacta o incompleta

(Rectificación), esto causará efectos en el servicio siempre y cuando la rectificación se haga

durante, o antes de la etapa de redacción del amparo, las fallas en el servicio derivadas de los

errores en los datos brindados por los clientes no serán responsabilidad de Torero. Tras concluir

con el servicio Torero eliminara todos los datos utilizados para promover el amparo contra

alcoholimetro (Cancelación). Finalmente, tiene derecho a oponerse al uso de sus datos

personales para fines específicos (Oposición). Estos derechos son conocidos como derechos

Arco.\n

\tPara ejercer alguno de los derechos mencionados anteriormente el titular deberá comunicarse a

Torero:\n

\t\tTeléfono celular: 044-55-41-44-17-79\n

\t\tCorreo electrónico: toreroapp@gmail.com\n\n

\tV. Torero no transferirá los datos brindados por los titulares, únicamente hará entrega de el

nombre y domicilio del titular a la autoridad correspondiente para conocer del amparo contra el

alcoholimetro.\n\n

\tVI. Torero notificará por medio de esta aplicación cualquier cambio realizado en este Aviso de

Privacidad, esto se hará de conformidad con lo previsto en la Ley Federal de Protección de Datos

Personales en Posesión de los Particulares.</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_confirmar">Confirmar</string>
    <string name="title_activity_popup_terminos">PopupTerminos</string>
    <string name="title_activity_terminos">Terminos</string>
    <string name="title_activity_aviso_privacidad">AvisoPrivacidad</string>
    <string name="title_activity_pagar">Pagar</string>
    <string name="title_activity_gracias">Gracias</string>
</resources>
