<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.toreo.torero.Terminos">

    <TextView android:id="@+id/termScroll"
        android:text="@string/terminos_condiciones"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:maxLines="10000"
        android:scrollbars="vertical"
        android:layout_below="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="37dp" />

    <TextView android:id="@+id/aviScroll"
        android:text="@string/aviso_privacidad"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:maxLines="10000"
        android:scrollbars="vertical"
        android:layout_above="@+id/ButtonAceptarTerminos"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="50dp" />

    <TextView android:text="Aviso del Privacidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5" />


    <Button android:id="@+id/ButtonAceptarTerminos"
        android:layout_height="wrap_content"
        android:layout_width="120dp"
        android:text="@string/button"
        android:layout_gravity="center_horizontal|bottom"
        android:background="#4CAF50"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView android:text="Terminos y Condiciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/aviScroll"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="86dp" />


</RelativeLayout>
